# dt-demo-gcp

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  compose.yml  docker-bake.hcl  init.sh  pyproject.toml  scripts.sh
configs/: .isort.cfg  .markdownlint.yaml  ruff.toml
db/: pyproject.toml
db/auth/: gen_env.sh  pyproject.toml
dev-docs/: Dockerfile  README.md  mkdocs.yml  pyproject.toml
dev-docs/docs/: index.md  mkdocs.md  vscode.md
dev-docs/docs/architecture/: authentication.md  example_app.md  overview.md
dt-demo-gcp-auth/: Dockerfile  README.md  gen_env.sh  pyproject.toml  update_user.sh
dt-demo-gcp-auth/src/dt_demo_gcp/auth/: __init__.py  auth.py  config.py  dash_login.py  db.py  models.py
dt-demo-gcp-db-auth/: README.md  alembic.ini  gen_env.sh  init.sql.template  main.py  pyproject.toml
dt-demo-gcp-db-auth/alembic/: env.py  script.py.mako
dt-demo-gcp-db-auth/alembic/versions/: 14dd329ce812_set_server_default_for_uuid_id.py  25757de76e94_add_index_to_username_field.py  8fa17962a03a_create_table_users.py
dt-demo-gcp-login/: Dockerfile  README.md  index.html  package.json  vite.config.ts
dt-demo-gcp-login/src/: App.tsx
scripts/: dbmanage.sh  install.sh  ls.sh  subproject.sh  uv_scripts.py  uv_scripts.sh
scripts/install/: docker.sh  k8s.sh  utils.sh
templates/: docker_uv.Dockerfile
templates/ipynb/: git_stamp.py  template.ipynb
templates/mkdocs/: Dockerfile  README.md
templates/mkdocs/docs/: index.md
templates/react-mantine/: index.html  package.json
templates/react-mantine/src/: App.tsx
traefik/: traefik.yml
