[project]
name = "dt-demo-gcp-auth"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Yin-Chi Chan", email = "ycc39@cam.ac.uk" }
]
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "bcrypt>=4.3.0",
    "dash-compose>=2023.3.12",
    "dash-iconify>=0.1.2",
    "dash-mantine-components>=2.1.0",
    "fastapi[standard]>=0.116.1",
    "jwt-pydantic>=0.0.7",
    "pydantic-settings>=2.10.1",
    "sqlmodel>=0.0.24",
]
dynamic = ["version"]

[project.scripts]
auth = "dt_demo_gcp.auth:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.build-backend]
module-root = "src/dt_demo_gcp"

[tool.hatch.version]
path = "src/dt_demo_gcp/auth/__version__.py"
attribute = "__version__"

[tool.hatch.build.targets.wheel]
packages = ["src/dt_demo_gcp/"]
namespace_packages = ["dt_demo_gcp"]

[dependency-groups]
dev = [
    "hatch>=1.14.1",
]
