[project]
name = "dt-demo-gcp-db-auth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.4",
    "dt-demo-gcp-auth",
    "psycopg>=3.2.9",
    "pydantic-settings>=2.10.1",
]

[tool.uv.sources]
dt-demo-gcp-auth = { workspace = true }
